<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.sobre.SobreActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="20dp"
        android:elevation="4dp"
        android:background="@drawable/containershape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/lblAppName"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="35sp"
            android:textColor="#8B8989"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/app_sobre_item_versao"
            android:id="@+id/lblVersao"
            android:layout_below="@+id/lblAppName"
            android:layout_centerHorizontal="true"
            android:textColor="#8B8989"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imgSobre"
            android:src="@mipmap/logo_wiser_2"
            android:layout_below="@id/lblVersao"
            android:layout_above="@id/lblSobreRodape"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"/>

        <TextView
            android:id="@+id/lblSobreRodape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnCompartilhar"
            android:layout_centerHorizontal="true"
            android:text="@string/app_sobre_item_copyright"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#8B8989" />

        <Button
            android:id="@+id/btnCompartilhar"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:background="@android:color/transparent"
            android:text="@string/compartilhar"
            android:textColor="#8B8989"
            android:textSize="10dp" />

    </RelativeLayout>
</RelativeLayout>