<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".features.novadiscussao.NovaDiscussaoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:text="@string/titulo"
        android:id="@+id/lblTitulo"
        android:layout_below="@id/toolbar"
        style="@style/Title" />

    <TextView
        android:text="0 / 30"
        android:id="@+id/lblContTitulo"
        android:layout_below="@id/toolbar"
        style="@style/Info" />

    <EditText
        android:id="@+id/txtTituloDiscussao"
        android:layout_below="@+id/lblTitulo"
        android:maxLength="30"
        android:singleLine="true"
        android:inputType="textCapSentences"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        style="@style/Placeholder"
        android:capitalize="sentences" />

    <TextView
        android:text="@string/descricao"
        android:id="@+id/lblDescricao"
        android:layout_below="@+id/txtTituloDiscussao"
        style="@style/Title" />

    <TextView
        android:text="0 / 250"
        android:id="@+id/lblContDescricao"
        android:layout_below="@+id/txtTituloDiscussao"
        style="@style/Info" />

    <EditText
        android:id="@+id/txtDescricaoDiscussao"
        android:layout_below="@+id/lblDescricao"
        android:maxLength="250"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="10"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:textColor="@android:color/black"
        android:layout_marginTop="5dp"
        style="@style/Placeholder"
        android:capitalize="sentences" />

    <Button
        android:text="@string/criar"
        android:id="@+id/btnCriarDiscussao"
        android:layout_below="@+id/txtDescricaoDiscussao"
        android:layout_marginTop="20dp"
        style="@style/MainButton" />

</RelativeLayout>