<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:elevation="@dimen/toolbar_elevation"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/lblIdioma"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:text="@string/idioma"
        android:textColor="@android:color/primary_text_dark"/>

    <TextView
        android:id="@+id/lblIdiomasEscolhidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/btnFiltrar"
        android:layout_toEndOf="@+id/lblIdioma"
        android:text="Idiomas Escolhidos"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:inputType="textMultiLine|textNoSuggestions"/>

    <TextView
        android:id="@+id/lblFluencia"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblIdiomasEscolhidos"
        android:textColor="@android:color/primary_text_dark"
        android:layout_marginTop="10dp"
        android:text="@string/fluencia"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/lblFluenciasEscolhidas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblIdiomasEscolhidos"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@+id/btnFiltrar"
        android:layout_toEndOf="@+id/lblFluencia"
        android:text="Fluências Escolhidas"
        android:textColor="@android:color/primary_text_dark"
        android:textSize="12sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif"
        android:inputType="textMultiLine|textNoSuggestions"/>

    <Button
        android:id="@+id/btnFiltrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtrar"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:textColor="@android:color/primary_text_dark"
        android:layout_alignBottom="@+id/lblFluenciasEscolhidas"
        android:drawableRight="@drawable/ic_arrow"/>

</RelativeLayout>